feat: add plausible tracking script

--- a/src/components/common/Head.astro
+++ b/src/components/common/Head.astro
@@ -53,6 +53,7 @@ const {
   <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#ffffff" />
+  <script defer data-domain="mends.eu" src="https://plausible.mends.eu/js/script.js"></script>
   <ViewTransitions />
   <Unfont />
 </head>
