--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -99,6 +99,9 @@ const {
     <span slot="header">Our Tech Stack</span>
     <LogoElement src="/images/logo_grid/postgresql_logo.svg" alt="PostgreSQL" />
     <LogoElement src="/images/logo_grid/redis_logo.svg" alt="Redis" />
+    <LogoElement src="/images/logo_grid/rancher_logo.svg" alt="Rancher®" />
+    <LogoElement src="/images/logo_grid/k3s_logo.svg" alt="K3S" />
+    <LogoElement src="/images/logo_grid/longhorn_logo.svg" alt="Longhorn" />
     <LogoElement src="/images/logo_grid/docker_logo.svg" alt="Docker" />
     <LogoElement src="/images/logo_grid/portainer_logo.svg" alt="Portainer" />
     <LogoElement src="/images/logo_grid/n8n_logo.svg" alt="n8n" />
@@ -108,7 +111,7 @@ const {
     <LogoElement src="/images/logo_grid/directus_logo.svg" alt="Directus" />
     <LogoElement src="/images/logo_grid/astro_logo.svg" alt="Astro" />
     <LogoElement src="/images/logo_grid/tailwindcss_logo.svg" alt="Tailwind CSS" />
-    <LogoElement src="/images/logo_grid/plausible_logo.svg" alt="Plausible" />
+    <LogoElement src="/images/logo_grid/umami_logo.svg" alt="Umami" />
   </LogoSection>
 
   <CallToActionSection id="invest" buttonText="Invest Now (soon)">
