--- a/src/components/common/Head.astro
+++ b/src/components/common/Head.astro
@@ -53,7 +53,6 @@ const {
   <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#ffffff" />
-  <script defer data-domain="mends.eu" src="https://plausible.mends.eu/js/script.js"></script>
-  <ViewTransitions />
+  <script defer src="https://umami.mends.eu/script.js" data-website-id="d4c13a09-8b45-4011-8e14-118d135e0fa6"></script>  <ViewTransitions />
   <Unfont />
 </head>
